<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg"
            app:layoutDescription="@xml/filter_status_motion">


                <TextView
                    android:id="@+id/filter_header"
                    style="@style/text_title_style"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@color/header_bg"
                    android:gravity="center_vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:text="@string/filter"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/from_date_filter_tv"
                    style="@style/text_style"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="18dp"
                    android:gravity="center"
                    android:text="@string/from"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/to_date_filter_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/filter_header" />

                <TextView
                    android:id="@+id/to_date_filter_tv"
                    style="@style/text_style"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="18dp"
                    android:gravity="center"
                    android:text="@string/to"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/status_date_filter_tv"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/from_date_filter_tv"
                    app:layout_constraintTop_toBottomOf="@+id/filter_header" />


                <TextView
                    android:id="@+id/status_date_filter_tv"
                    style="@style/text_style"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:layout_marginBottom="18dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/to_date_filter_tv"
                    app:layout_constraintTop_toBottomOf="@+id/filter_header" />

            <Button
                android:id="@+id/clear_date_filter_button"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/clear_date_filter"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/clear_filter_status_button"
                app:layout_constraintEnd_toStartOf="@+id/clear_filter_status_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/to_date_filter_tv"
                app:visibilityMode="ignore"
                app:overlay="false"
                app:layout_editor_absoluteX="15dp" />

            <Button
                android:id="@+id/clear_filter_status_button"
                style="@style/text_style"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/clear_status_filter"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="@+id/clear_date_filter_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/clear_date_filter_button"
                app:layout_constraintTop_toBottomOf="@+id/from_date_filter_tv"
                app:visibilityMode="ignore"
                app:layout_editor_absoluteX="221dp"  />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/matches_recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clear_filter_status_button" />

            <Button
                android:id="@+id/confirm_filter_status_button_popup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/confirm_button"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:id="@+id/background_filter_status_popup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#000000"
                android:clickable="true"
                android:focusable="true" />

            <RelativeLayout
                android:id="@+id/filter_status_popup_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_rounded_bordered">


                <RadioGroup
                    android:id="@+id/match_status_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp">

                    <RadioButton
                        android:id="@+id/scheduled"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/scheduled"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/live"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/live"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/in_play"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/in_play"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/paused"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/paused"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/finished"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/finished"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <RadioButton
                        android:id="@+id/postponed"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/postponed"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <RadioButton
                        android:id="@+id/suspended"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/suspended"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                    <RadioButton
                        android:id="@+id/cancelled"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:buttonTint="@color/header_bg"
                        android:scaleX="0.7"
                        android:scaleY="0.7"
                        android:text="@string/cancelled"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </RadioGroup>

            </RelativeLayout>

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <RelativeLayout
            android:id="@+id/AppLoadingRL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bpTransparent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:progress="25" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>